<resources>
    <string name="app_name">NigeriaTelemedicine</string>

    <!--Drawer-->
    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="review">My Feed</string>
    <string name="action_settings">Settings</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--main Activity -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone</string>
    <string name="hint_description">Description</string>
    <string name="consult_doctor">Consult a Doctor</string>

    <!--about fragment-->
    <string name="project_info">Fortitudo is a registered company with
        Cooperate Afairs Commission of Nigeria.
        Through our telemedicine division, Fortitudo Inc. provides 24/7/365 telephone consultations
        to our patients regardless of patient location or ability to pay for service.
        Thanks to our donors and sponsors, Fortitudo now provides free consultations up to 19 consults per month.
        We have certified pool of doctors with diverse experience and training.
        Our doctors train and practice in Africa, America, and Europe.</string>
    <string name="link_website">1. https://www.callnigeriandoc.com</string>
    <string name="link_git_repo">2.  https://github.com/openmrs</string>
    <string name="link_organization">3. https://openmrs.com/</string>

    <string name="version">"version"</string>
    <string name="submit">Submit</string>
</resources>
